@@ -1,3 +1,8 @@
+2006-05-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* if.h: (struct connected) Document the meaning of the
+	  ZEBRA_IFC_REAL and ZEBRA_IFC_CONFIGURED flags.
+
 2006-05-15 Paul Jakma <paul.jakma@sun.com>
 
 	* log.c: (general) Generalise struct zebra_route_desc into
